mobile friendly through section 4

--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
 
 
   <!-- SECTION TWO START etsi udiditlv through blackberries & brown sugar-->
-<section id="etsi">
+  <section id="etsi">
     <div class="etsi-inner">
     <div class="etsi-title">
     <h1>Etsi <br />Udiditlv // <br/>Our Lost<br/>Mother</h1>
     <h2>(ah-chee ouh-dee-deet-lun)</h2>
-    <h2>by Josie Watson</h2>
+    <h2>By Josie Watson</h2>
     </div>
 
     <!-- div class="etsi-inner"><img src="images/etsi-1.png" /></div> -->
@@ -184,47 +184,40 @@
   </section>
 
   <section id="big-chop">
-    <div id="big-chop-text">
-    <p>I was told <br/>it was too nappy <br/>too unprofessional <br/>too wild</p>
-
-    <p>I had grown accustomed to<br/>people laughing<br/>at its dead ends <br/>and unwillingness to lie down</p>
-
-    <p> No one told me <br/>that my hair was learning how to sing <br/>and that every time <br/>it faced the scalding relaxers <br/>and red-hot flat irons, <br/>I was erasing <br/>the tone of my hair’s voice <br/>its unrelenting texture <br/>its powerful volume</p>
-
-    <p>Those scissors freed me <br/>as I watched the straight pieces fall away <br/>I began to love myself <br/>for everything I am <br/>for my afro that rises towards the sun <br/>for the strength to break combs <br/>for the power to revert back after being abused</p>
-
-    <p>I am no longer drowning in the sea of white wishes, <br/>feeling weighed down by my Black gifts wrapped in gold</p>
-    </div>
-
-    <div id="big-chop-title">
-      <h1>Big Chop</h1>
-      <h2>by Melanie Horton</h2>
-      <img src="images/big-chop.jpg" /> 
-      <img src="images/big-chop2.jpg" /> 
-    </div>
-    <div>
-
-    </div>
+    <div class="row">
+      <div class="col-sm-6">
+        <p>I was told <br/>it was too nappy <br/>too unprofessional <br/>too wild</p>
+        <p>I had grown accustomed to<br/>people laughing<br/>at its dead ends <br/>and unwillingness to lie down</p>
+        <p>No one told me <br/>that my hair was learning how to sing <br/>and that every time <br/>it faced the scalding relaxers <br/>and red-hot flat irons, <br/>I was erasing <br/>the tone of my hair’s voice <br/>its unrelenting texture <br/>its powerful volume</p>
+        <p>Those scissors freed me <br/>as I watched the straight pieces fall away <br/>I began to love myself <br/>for everything I am <br/>for my afro that rises towards the sun <br/>for the strength to break combs <br/>for the power to revert back after being abused</p>
+        <p>I am no longer drowning in the sea of white wishes, <br/>feeling weighed down by my Black gifts wrapped in gold</p>
+      </div>
+      <div class="col-sm-6">
+        <h1>Big Chop</h1>
+        <h2>By Melanie Horton</h2>
+        <img src="images/big-chop.jpg" />
+        <img src="images/big-chop2.jpg" />
+      </div>
   </section>
 
   <section id="mira-que">
-    <div >
-      <h1>Mira Que Te Quiso, Fue Por Tu Pelo</h1>
-      <h2>Leticia Rocha</h2>
-      <img src="images/big-chop3.jpg" /> 
-      <img src="images/big-chop4.jpg" /> 
-    </div>
-  <div>
-    <p>
-    (Look, if I loved you, it was for your hair...)<br/>these lyrics spin around my head <br/>each note like a dagger to the ear <br/>as I sit in this barren room,  <br/>sickly-sweet melody echoing your absence. <br/>cold silver scissors find their way <br/>into my hand, destined  <br/>for the coarse, dark strands of hair <br/>you once ran your fingers through. <br/>snip, snip, like a surgical blade <br/>across the umbilical cord, <br/>clumps of black pouring <br/>heavily, each curl burdened  <br/>with stories of you. <br/>my fingers clasp the last lock, <br/>an emblem of sacrifice. <br/>I am obliterating this carcass  <br/>you betrayed and ravaged,  <br/>ready to rise as a newborn babe <br/>out of the black tendrils I slayed. <br/>...ahora que estás pelona ya no te quiero. <br/>(...now that you are bald, I don’t love you anymore.)
-    </p>
+    <div class="row">
+      <div class="col-sm-6">
+        <h1>Mira Que Te Quiso, Fue Por Tu Pelo</h1>
+        <h2>By Leticia Rocha</h2>
+        <img src="images/big-chop3.jpg" />
+        <img src="images/big-chop4.jpg" />
+      </div>
+      <div class="col-sm-6">
+        <p>(Look, if I loved you, it was for your hair...)<br/>these lyrics spin around my head <br/>each note like a dagger to the ear <br/>as I sit in this barren room,  <br/>sickly-sweet melody echoing your absence. <br/>cold silver scissors find their way <br/>into my hand, destined  <br/>for the coarse, dark strands of hair <br/>you once ran your fingers through. <br/>snip, snip, like a surgical blade <br/>across the umbilical cord, <br/>clumps of black pouring <br/>heavily, each curl burdened  <br/>with stories of you. <br/>my fingers clasp the last lock, <br/>an emblem of sacrifice. <br/>I am obliterating this carcass  <br/>you betrayed and ravaged,  <br/>ready to rise as a newborn babe <br/>out of the black tendrils I slayed. <br/>...ahora que estás pelona ya no te quiero. <br/>(...now that you are bald, I don’t love you anymore.)</p>
+      </div>
     </div>
   </section>
 
   <section id="blackberries">
     <div>
-    <h1>Blackberries <br/>& Brown Sugar</h1>
-    <h2>by Kayla Williams</h2>
+      <h1>Blackberries<br>& Brown Sugar</h1>
+      <h2>By Kayla Williams</h2>
     </div>
 
     <p>The amber skin you swim in <br/>Sits atop a magic dark and pure <br/>A night sky eternal <br/>Body tangled in the shackles of a supremacy that will forever remain <br/>Jaundiced and pasty</p>
@@ -242,32 +235,26 @@
 
   <!-- SECTION THREE START, mary's grandbaby through limbo -->
 <section id="carissa">
-    <div class="blank_space"></div>
     <div class="title">
       <h1>Mary's Grandbaby (something like a goodbye for my grandmother)</h1>
       <h2>By Carissa Fleury</h2>
     </div>
     <div class="text">
-      <div class="column">
-        <p>my nana is<br>backyard peach trees<br>dripping in california sunshine but<br>her heart was always in<br>nashville</p>
-        <p>when she was forced from that home <br>because of fear of strange fruit<br>&amp; trees &amp; picnic postcards, she<br> breathed a sigh into a bottle and<br> buried it in the hot tennessee soil</p>
-        <p>my nana just gave her last sigh and <br>all I can think of is<br>charcoal women and how<br>she couldn’t remember me but <br>when she lay dying<br>my auntie told me across miles of land,<br>over crackling telephone lines and in cracking voices <br>that my nana’s eyelids fluttered when<br>she heard my voice</p>
-        <p>when I was a Black baby <br>(born with dusty dark skin <br>that lightened over the<br>years and a full head of hair) <br>she pressed her grammy kisses <br>into my cheeks and called<br>me “little peach” for the first time</p>
-        <p>as I grew up, I got gangly,<br>then<br>melancholy and every summer I<br>ran around picking peaches off of her <br>trees as she played jazz on the radio and told me that<br>my laugh sounded like a<br>miracle, taught me to<br>love the color yellow and long for her <br>Black fingers oiling my scalp when<br>I left at the end of each summer</p>
-      </div>
-      <div class="column">
-        <p>my nana was the first one<br>who showed me Billie Holiday<br>on her back porch with sticky<br>fingers from homemade<br>pies and as she lay dying, I sang<br>her Billie Holiday—<br>for years, I was dreading<br>this day becoming a marked-on-the-calendar day <br>this same day as her daughter’s birthday<br>she passed away and<br>my papa was an oak tree but<br>my nana was a warm breeze</p>
-        <p>my nana taught me that this Black<br>body is holy, wholly<br>she taught me to love each inch of my skin, <br>to oil it up<br>because nobody else would love it like I did <br>to braid my hair each night with my fingers <br>(the same as hers)<br>to stand with a straight spine (when I could) <br>to speak in a red brick voice and<br>to never let no white men tell<br>me I wasn’t worth nothin’<br>because I was Mary’s grandbaby and ain’t <br>nobody gon’ tell me I’m not worthy</p>
-        <p>papa went first and now my nana, <br>my two Black strongholds<br>&amp; now they’re ghosts<br>or maybe spirits<br>or maybe they’re nowhere<br>or maybe they’re everywhere<br>and maybe this<br>black queer body of mine will<br>always tingle when I eat peaches or hear Billie</p>
-        <p>and when I braid my Black girl <br>students’ hair and<br>my fingers twist as<br>second nature, and they ask me <br>where I learned this, I will say <br>with a warm breeze smile<br>“my nana taught me.”</p>
-      </div>
+      <p>my nana is<br>backyard peach trees<br>dripping in california sunshine but<br>her heart was always in<br>nashville</p>
+      <p>when she was forced from that home <br>because of fear of strange fruit<br>&amp; trees &amp; picnic postcards, she<br> breathed a sigh into a bottle and<br> buried it in the hot tennessee soil</p>
+      <p>my nana just gave her last sigh and <br>all I can think of is<br>charcoal women and how<br>she couldn’t remember me but <br>when she lay dying<br>my auntie told me across miles of land,<br>over crackling telephone lines and in cracking voices <br>that my nana’s eyelids fluttered when<br>she heard my voice</p>
+      <p>when I was a Black baby <br>(born with dusty dark skin <br>that lightened over the<br>years and a full head of hair) <br>she pressed her grammy kisses <br>into my cheeks and called<br>me “little peach” for the first time</p>
+      <p>as I grew up, I got gangly,<br>then<br>melancholy and every summer I<br>ran around picking peaches off of her <br>trees as she played jazz on the radio and told me that<br>my laugh sounded like a<br>miracle, taught me to<br>love the color yellow and long for her <br>Black fingers oiling my scalp when<br>I left at the end of each summer</p>
+      <p>my nana was the first one<br>who showed me Billie Holiday<br>on her back porch with sticky<br>fingers from homemade<br>pies and as she lay dying, I sang<br>her Billie Holiday—<br>for years, I was dreading<br>this day becoming a marked-on-the-calendar day <br>this same day as her daughter’s birthday<br>she passed away and<br>my papa was an oak tree but<br>my nana was a warm breeze</p>
+      <p>my nana taught me that this Black<br>body is holy, wholly<br>she taught me to love each inch of my skin, <br>to oil it up<br>because nobody else would love it like I did <br>to braid my hair each night with my fingers <br>(the same as hers)<br>to stand with a straight spine (when I could) <br>to speak in a red brick voice and<br>to never let no white men tell<br>me I wasn’t worth nothin’<br>because I was Mary’s grandbaby and ain’t <br>nobody gon’ tell me I’m not worthy</p>
+      <p>papa went first and now my nana, <br>my two Black strongholds<br>&amp; now they’re ghosts<br>or maybe spirits<br>or maybe they’re nowhere<br>or maybe they’re everywhere<br>and maybe this<br>black queer body of mine will<br>always tingle when I eat peaches or hear Billie</p>
+      <p>and when I braid my Black girl <br>students’ hair and<br>my fingers twist as<br>second nature, and they ask me <br>where I learned this, I will say <br>with a warm breeze smile<br>“my nana taught me.”</p>
     </div>
-  <img id="summer_img" src = "images/small_summer.png">
+  <img id="summer_img" src="images/small_summer.png">
 </section>
 
 <section id="aishvarya">
-  <div id="blank_space_1"></div>
-    <div class= "title">
+    <div class="title">
       <h1>Fault Line Swell</h1>
       <h2>By Aishvarya Arora</h2>
     </div>
@@ -301,56 +288,55 @@
       <p>me <i>the organism</i> America &emsp;&emsp;never did<br>
       take me inside.</p>
     </div>
-    <img id="bee" src = "images/bee.png">
-    <img id="flower" src = "images/flower.png">
-    <img id="blackberry" src = "images/blackberries.png">
-    <img id="butterfly" src = "images/butterfly.png">
-    <img id="heron" src = "images/heron.png">
-    <img id="pelican" src = "images/pelican.png">
+    <img id="bee" src="images/bee.png">
+    <img id="flower" src="images/flower.png">
+    <img id="blackberry" src="images/blackberries.png">
+    <img id="butterfly" src="images/butterfly.png">
+    <img id="heron" src="images/heron.png">
+    <img id="pelican" src="images/pelican.png">
   </section>
-  <div id="blank_space"></div>
+
 
  <section id="emily">
-    <div class= "title">
-      <h1>Star Ferry</h1>
-      <h2>By Emily Ng</h2>
-    </div>
+    <h1>Star Ferry</h1>
+    <h2>By Emily Ng</h2>
     <div class="column">
-    <p>sometimes I forget<br>about the blood<br>that lurks under the blue liquor of the harbor.</p>
-    <p>if I wait long enough<br>I can hear the echoing sounds of machines, <br>of hands on tilling hoes,<br>of clicks on buttons,</p>
-    <p>because all the hurt<br>on people’s hands<br>sheds a bit on everything they touch.</p>
-    <p>I hear the hurt everywhere <br>it opens the world to me.</p>
-    <p>but sometimes I forget,<br>because the wind of the South China straits <br>unfolds hair from the back of my ears</p>
-    <p>whispering a sweet sound</p>
-    <p>that tomorrow will come</p>
+      <div class="text">
+        <p>sometimes I forget<br>about the blood<br>that lurks under the blue liquor of the harbor.</p>
+        <p>if I wait long enough<br>I can hear the echoing sounds of machines, <br>of hands on tilling hoes,<br>of clicks on buttons,</p>
+        <p>because all the hurt<br>on people’s hands<br>sheds a bit on everything they touch.</p>
+        <p>I hear the hurt everywhere <br>it opens the world to me.</p>
+        <p>but sometimes I forget,<br>because the wind of the South China straits <br>unfolds hair from the back of my ears</p>
+        <p>whispering a sweet sound</p>
+        <p>that tomorrow will come</p>
+      </div>
     </div>
   </section>
-<div id="blank_space"></div>
 
   <section id="tiara_anon">
     <div id="anonymous">
       <div id="blank_space"></div>
-      <div class= "title">
+      <div class="title">
         <h1>i don't feel trapped anymore but i still don't feel free</h1>
         <h2>By Anonymous</h2>
       </div>
-      <div class="text" id="1">
-        <p>i see my doctor, ask her about top surgery, ask her about bloodwork, ask her to raise my dose. these are decisions i made a long time ago that i thought i’d take my time with. there is no time anymore.<br>my doctor asks why i want my dose raised and i tell her i still get cramps. “for two years you’ve had cramps?” i nod. it’s not something i want to talk about. before i leave she remembers i’m almost 21, right? yes. well, soon i will have to decide between removing my uterus and getting pap smears. i do not want to remove my uterus. i do not want to get pap smears. i may not be a Woman but i am not ready to give up bearing a child. i know what the procedure entails but i look it up anyway when i get home. i cry.</p>
-      </div>
-      <div class="text" id="2">no one has seen my body but me since i was very young. and it doesn’t feel right. i love it, but it doesn’t feel right. i love it, but there are things i want to change. i love it, but it took me a long time to love it and every day i worry that no one else has the time, or the patience. i  nally believe i am beautiful.</div>
-      <div class="text" id="2">only some days is that enough.</div>
+      <p>i see my doctor, ask her about top surgery, ask her about bloodwork, ask her to raise my dose. these are decisions i made a long time ago that i thought i’d take my time with. there is no time anymore.<br>my doctor asks why i want my dose raised and i tell her i still get cramps. “for two years you’ve had cramps?” i nod. it’s not something i want to talk about. before i leave she remembers i’m almost 21, right? yes. well, soon i will have to decide between removing my uterus and getting pap smears. i do not want to remove my uterus. i do not want to get pap smears. i may not be a Woman but i am not ready to give up bearing a child. i know what the procedure entails but i look it up anyway when i get home. i cry.</p>
+      <p>no one has seen my body but me since i was very young. and it doesn’t feel right. i love it, but it doesn’t feel right. i love it, but there are things i want to change. i love it, but it took me a long time to love it and every day i worry that no one else has the time, or the patience. i  nally believe i am beautiful.</p>
+      <p>only some days is that enough.</p>
     </div>
 
     <div id="tiara">
-      <div class= "title">
-        <h1>Limbo</h1>
-        <h2>By Tiara Bhatacharya</h2>
+      <div class="inner-text">
+        <div class="title">
+          <h1>Limbo</h1>
+          <h2>By Tiara Bhatacharya</h2>
+        </div>
+        <br>
+        <div class="column">
+          <p>i. it bothers me sometimes that there’s no place to go back to. bodies, tension, string. snap, snap,  ash, fuck, i never should have come here. you don’t know what it’s like to bathe in blood no one shares. to nurse my own diaspora. ma, forgive me for leaving you at home, my heart thinks of you and weeps, weeps, weeps. i am only a child, and i should have been a vessel. last week when i couldn’t sleep at night, sweat clouding my neck, i thought of you. you don’t know what it’s like to nurse my own diaspora. shoulder blades and dirty necks i had to nurse my own diaspora. i scrubbed the yellow out of my  ngernails. shoulder blades and dirty necks i had to nurse my own diaspora. ashed a cigarette on fresh snow and called it home.</p>
+          <p>ii. it bothers me sometimes that there’s no place to go back to. horizons in limbo. she looks at me and holds my heart in her eyes and she looks so gentle i feel my heart slow and then weep. shoulder blades and dirty necks and an expired time sheet. god saw me turn orange and i knelt in front of her. i couldn’t tell if it was sandpaper or her tongue but i bled anyway. he plunged his fingers into me and i wondered why i even bothered. he plunged his fingers into me and i felt her hand brush against mine. it was an accident but she looked at me and my hair grew heavy, fuck, fuck, there’s no going back.</p>
+        </div>
       </div>
-      <div class="column">
-        <p>i. it bothers me sometimes that there’s no place to go back to. bodies, tension, string. snap, snap,  ash, fuck, i never should have come here. you don’t know what it’s like to bathe in blood no one shares. to nurse my own diaspora. ma, forgive me for leaving you at home, my heart thinks of you and weeps, weeps, weeps. i am only a child, and i should have been a vessel. last week when i couldn’t sleep at night, sweat clouding my neck, i thought of you. you don’t know what it’s like to nurse my own diaspora. shoulder blades and dirty necks i had to nurse my own diaspora. i scrubbed the yellow out of my  ngernails. shoulder blades and dirty necks i had to nurse my own diaspora. ashed a cigarette on fresh snow and called it home.</p>
-        <p>ii. it bothers me sometimes that there’s no place to go back to. horizons in limbo. she looks at me and holds my heart in her eyes and she looks so gentle i feel my heart slow and then weep. shoulder blades and dirty necks and an expired time sheet. god saw me turn orange and i knelt in front of her. i couldn’t tell if it was sandpaper or her tongue but i bled anyway. he plunged his fingers into me and i wondered why i even bothered. he plunged his fingers into me and i felt her hand brush against mine. it was an accident but she looked at me and my hair grew heavy, fuck, fuck, there’s no going back.</p>
-      </div>
-      <div id="blank_space"></div>
     </div>
   </section>
 
