--- a/index.html
+++ b/index.html
@@ -502,101 +502,127 @@
     <p><br />I am trying to tell you<br />That masculinity has ripped me apart,<br />As it has torn my people,<br />As it has hurt our voices,<br />As it has taken over our minds.</p>
     <p><br />Our mistake was that we had no manhood<br />To mask us. Yours<br />was that you believed<br />That it could mask you.</p>
 
-    <h2>By Saba Kohli Dave</h2>
+    <h2>By Saba Kohli Dav&eacute;</h2>
   </section>
 
   <section id="mother">
-  <h1>mother</h1>
-  <h2>by sarah chin</h2>
-  <p>what I can<br />glean<br />from her</p>
-  <p><br />body, is that<br />I must give thanks for<br />what I can.</p>
-  <p><br />I see<br />how it&rsquo;s all been taken<br />from her,</p>
-  <p><br />feel her fear<br />and do<br />what I can,</p>
-  <p><br />brush her hair<br />as she lounges in the tub, puckered<br />from her</p>
-  <p><br />bath salts; lend her my skirt<br />on the nights when<br />what I can</p>
-  <p><br />do is not enough and she is restless<br />and she wants to go out and escape<br />from her</p>
-  <p><br />rutted skin. she doesn&rsquo;t tell me that she is dying<br />in the way that all women are, that<br />what I can</p>
-  <p><br />do is irrelevant because there is nothing<br />any of us can do to make it stop because it comes<br />from her.</p>
-  <p><br />so the only thing left<br />is to do<br />what I can</p>
-  <p><br />and take<br />what I can<br />from her.</p>
-
-
+    <div class="text">
+      <h1>mother</h1>
+      <h2>By Sarah Chin</h2>
+      <p>what I can<br />glean<br />from her</p>
+      <p>body, is that<br />I must give thanks for<br />what I can.</p>
+      <p>I see<br />how it&rsquo;s all been taken<br />from her,</p>
+      <p>feel her fear<br />and do<br />what I can,</p>
+      <p>brush her hair<br />as she lounges in the tub, puckered<br />from her</p>
+      <p>bath salts; lend her my skirt<br />on the nights when<br />what I can</p>
+      <p>do is not enough and she is restless<br />and she wants to go out and escape<br />from her</p>
+      <p>rutted skin. she doesn&rsquo;t tell me that she is dying<br />in the way that all women are, that<br />what I can</p>
+      <p>do is irrelevant because there is nothing<br />any of us can do to make it stop because it comes<br />from her.</p>
+      <p>so the only thing left<br />is to do<br />what I can</p>
+      <p>and take<br />what I can<br />from her.</p>
+    </div>
   </section>
 
   <section id ="dreams-allowed">
-    <h1>I'm allowed to have my dreams</h1>
-    <h2>By Nazifa Noor Sarawat</h2>
-    <div data-canvas-width="22.67489220563847">We talk about how I&rsquo;m doing and our eyes avoid each other&rsquo;s.</div>
-    <div data-canvas-width="214.26435820895517">I try to look at you more: your skin</div>
-    <div data-canvas-width="336.79050082918735">browned from years of baking under the American sun,</div>
-    <div data-canvas-width="319.79027529021556">valleys plowed into your forehead, grease etched into</div>
-    <div data-canvas-width="264.57557545605306">your knuckle creases. I&rsquo;m not sure what it is</div>
-    <div data-canvas-width="215.48279933665003">that keeps me from you but I flinch</div>
-    <div data-canvas-width="148.66319071310113">whenever you touch me.</div>
-    <div data-canvas-width="148.66319071310113">&nbsp;</div>
-    <div data-canvas-width="328.9152106135987">The tips of your fingers are wide and flat and calloused</div>
-    <div data-canvas-width="229.76084908789392">and carefully separate little white pills</div>
-    <div data-canvas-width="362.06423880597004">into plastic compartments marked for every day of the week.</div>
-    <div data-canvas-width="344.6776782752903">I take pills now too and when I hear their rattle I think of</div>
-    <div data-canvas-width="364.9023150912104">falling bottles and scattered dreams, stars against a night sky,</div>
-    <div data-canvas-width="296.37243117744606">small specks spilled against a dark kitchen carpet,</div>
-    <div data-canvas-width="267.57710116086236">and me, looking through the black expanses</div>
-    <div data-canvas-width="427.6208291873961">trying to find the pinpricks of white. They&rsquo;re harder to find in Brooklyn.</div>
-    <div data-canvas-width="427.6208291873961">&nbsp;</div>
-    <div data-canvas-width="317.6520597014925">We sit at the kitchen table and you separate your pills</div>
-    <div data-canvas-width="245.21424875621892">and Ammu empties pots into containers</div>
-    <div data-canvas-width="365.0063283582089">to store for tomorrow. You hear metal scraping against metal</div>
-    <div data-canvas-width="218.54376119402988">and tell me the story of your brother</div>
-    <div data-canvas-width="352.7327628524047">who heard the same sound every night as they scraped out</div>
-    <div data-canvas-width="255.9439601990049">the blackened bottoms of pots to feed him.</div>
-    <div data-canvas-width="270.71235820895527">Here at the table the light is warm and yellow</div>
-    <div data-canvas-width="168.81204643449416">but you are in another place</div>
-    <div data-canvas-width="241.84273300165833">where tomorrow&rsquo;s meal is not as certain.</div>
-    <div data-canvas-width="241.84273300165833">&nbsp;</div>
-    <div data-canvas-width="313.61188723051396">How many sounds take you back to stories of abuse?</div>
-    <div data-canvas-width="296.91032835820886">Abbu, you have a lot of stories. So now you laugh</div>
-    <div data-canvas-width="197.39934991708122">when you see death on the news.</div>
-    <div data-canvas-width="273.19530348258695">I don&rsquo;t know what your laughter does for you</div>
-    <div data-canvas-width="285.52681923714755">but my teeth are like yours, and my smile is too.</div>
-    <div data-canvas-width="429.71595356550574">I couldn&rsquo;t make you cry with me, so I stopped laughing with you instead</div>
-    <div data-canvas-width="414.8866334991707">and now we sit silent. Sometimes one of us laughs and one of us cries.</div>
-    <div data-canvas-width="414.8866334991707">&nbsp;</div>
-    <div data-canvas-width="180.23864676616913">In a dream I was afraid of you</div>
-    <div data-canvas-width="344.8723316749585">and I tried to escape the you that dream-you had become.</div>
-    <div data-canvas-width="400.5788656716418">When I woke up, I felt a cold pressing between my shoulder blades</div>
-    <div data-canvas-width="238.97493864013273">and I knew the fear had stayed with me.</div>
-    <div data-canvas-width="402.88201658374794">I&rsquo;m allowed to have dreams, you say, when one of us runs from you.</div>
-    <div data-canvas-width="240.3271111111111">On the phone your voice sounds folded.</div>
-    <div data-canvas-width="335.0371343283581">Your words slip off my skin like sweat and I have to ask,</div>
-    <div data-canvas-width="266.33042786069643">when the dreams are gone, what is left of us?</div>
-    <div data-canvas-width="179.21188723051407">What is left of your daughter?</div>
+    <div class="inner-text">
+      <h1>I'm allowed to have my dreams</h1>
+      <h2>By Nazifa Noor Sarawat</h2>
+      <p>
+        We talk about how I&rsquo;m doing and our eyes avoid each other&rsquo;s.<br>
+        I try to look at you more: your skin<br>
+        browned from years of baking under the American sun,<br>
+        valleys plowed into your forehead, grease etched into<br>
+        your knuckle creases. I&rsquo;m not sure what it is<br>
+        that keeps me from you but I flinch<br>
+        whenever you touch me.
+      </p>
+      <p>
+        The tips of your fingers are wide and flat and calloused<br>
+        and carefully separate little white pills<br>
+        into plastic compartments marked for every day of the week.<br>
+        I take pills now too and when I hear their rattle I think of<br>
+        falling bottles and scattered dreams, stars against a night sky,<br>
+        small specks spilled against a dark kitchen carpet,<br>
+        and me, looking through the black expanses<br>
+        trying to find the pinpricks of white. They&rsquo;re harder to find in Brooklyn.
+      </p>
+      <p>
+        We sit at the kitchen table and you separate your pills<br>
+        and Ammu empties pots into containers<br>
+        to store for tomorrow. You hear metal scraping against metal<br>
+        and tell me the story of your brother<br>
+        who heard the same sound every night as they scraped out<br>
+        the blackened bottoms of pots to feed him.<br>
+        Here at the table the light is warm and yellow<br>
+        but you are in another place<br>
+        where tomorrow&rsquo;s meal is not as certain.
+      </p>
+      <p>
+        How many sounds take you back to stories of abuse?<br>
+        Abbu, you have a lot of stories. So now you laugh<br>
+        when you see death on the news.<br>
+        I don&rsquo;t know what your laughter does for you<br>
+        but my teeth are like yours, and my smile is too.<br>
+        I couldn&rsquo;t make you cry with me, so I stopped laughing with you instead<br>
+        and now we sit silent. Sometimes one of us laughs and one of us cries.
+      </p>
+      <p>
+        In a dream I was afraid of you<br>
+        and I tried to escape the you that dream-you had become.<br>
+        When I woke up, I felt a cold pressing between my shoulder blades<br>
+        and I knew the fear had stayed with me.<br>
+        I&rsquo;m allowed to have dreams, you say, when one of us runs from you.<br>
+        On the phone your voice sounds folded.<br>
+        Your words slip off my skin like sweat and I have to ask,<br>
+        when the dreams are gone, what is left of us?<br>
+        What is left of your daughter?
+      </p>
+    </div>
   </section>
 
   <section id="mother-glass">
     <h1>Mother's Glass</h1>
-    <div data-canvas-width="22.67489220563847">Sweat on bodies on sheets in a house<br />your mother worked so hard to build.<br />Those plants in the living room are<br />the manifestations of you. Your mother loves you<br />and you are lucky.<br />You are so goddamn lucky.</div>
-    <div data-canvas-width="22.67489220563847"><br />Your mother loves you even though<br />you&rsquo;re sweet talking a trite young girl<br />into falling out of her sundress<br />beneath the roof your mother pays for by working six to six<br />in that crowded downtown city you hate so much.</div>
-    <div data-canvas-width="22.67489220563847"><br />Your mother loves you and you don&rsquo;t know<br />that the girl underneath your kelly green covers<br />is not naked because you threw her underwear across the room,<br />but because she hasn&rsquo;t tasted her mother&rsquo;s love<br />since the day cancer chose to curl around her chest.</div>
-    <div data-canvas-width="22.67489220563847"><br />She is naked and afraid,<br />Do you see it? Do you see her shivering?<br />Those easy eyes and promiscuous palms have been burned<br />more times than the wood in your fireplace;<br />she is cold because her heart is perspiring out of her pores<br />and freezing upon contact with your breathy exhales.</div>
-    <div data-canvas-width="255.9439601990049">&nbsp;</div>
-
     <h2>By Asia Acevedo</h2>
-    <p>You cannot melt her.</p>
-    <p>While you cradled her like a broken arm to your chest,<br />she said this was wrong but you retaliated that you don&rsquo;t even believe in god,<br />you don&rsquo;t believe in him, you said as you latched your lips to hers<br />and stole the breath she&rsquo;d been saving in a mason jar at the pit of her stomach<br />for the day she thought she&rsquo;d drown.</p>
-    <p>But you don&rsquo;t realize that she is cold<br />and she is dark and she is hardened because<br />your mother loves you and hers cannot.<br />Your mother loves you and here you are reopening the scars<br />she painted on her body years ago when you first said she wasn&rsquo;t worth it.<br />But now she is worth it,<br />because she is naked and she is an open invitation.<br />But don&rsquo;t forget,<br />your mother too was once sweet talked into severing the dress from her skeleton<br />by a boy she thought could thaw that glacier within;<br />she realized too late that mingling bodies didn&rsquo;t melt the ice, only solidified it.<br />And despite being naked and cold and starving for two,<br />she birthed you from the arctic,<br />and loved you anyway</p>
+    <div class="text">
+      <p>
+        Sweat on bodies on sheets in a house<br />your mother worked so hard to build.<br />Those plants in the living room are<br />the manifestations of you. Your mother loves you<br />and you are lucky.<br />You are so goddamn lucky.
+      </p>
+      <p>
+        Your mother loves you even though<br />you&rsquo;re sweet talking a trite young girl<br />into falling out of her sundress<br />beneath the roof your mother pays for by working six to six<br />in that crowded downtown city you hate so much.
+      </p>
+      <p>
+        Your mother loves you and you don&rsquo;t know<br />that the girl underneath your kelly green covers<br />is not naked because you threw her underwear across the room,<br />but because she hasn&rsquo;t tasted her mother&rsquo;s love<br />since the day cancer chose to curl around her chest.
+      </p>
+      <p>
+        She is naked and afraid,<br />Do you see it? Do you see her shivering?<br />Those easy eyes and promiscuous palms have been burned<br />more times than the wood in your fireplace;<br />she is cold because her heart is perspiring out of her pores<br />and freezing upon contact with your breathy exhales.
+      </p>
+      <p>
+        You cannot melt her.
+      </p>
+      <p>
+        While you cradled her like a broken arm to your chest,<br />she said this was wrong but you retaliated that you don&rsquo;t even believe in god,<br />you don&rsquo;t believe in him, you said as you latched your lips to hers<br />and stole the breath she&rsquo;d been saving in a mason jar at the pit of her stomach<br />for the day she thought she&rsquo;d drown.
+      </p>
+      <p>
+        But you don&rsquo;t realize that she is cold<br />and she is dark and she is hardened because<br />your mother loves you and hers cannot.<br />Your mother loves you and here you are reopening the scars<br />she painted on her body years ago when you first said she wasn&rsquo;t worth it.<br />But now she is worth it,<br />because she is naked and she is an open invitation.<br />But don&rsquo;t forget,<br />your mother too was once sweet talked into severing the dress from her skeleton<br />by a boy she thought could thaw that glacier within;<br />she realized too late that mingling bodies didn&rsquo;t melt the ice, only solidified it.<br />And despite being naked and cold and starving for two,<br />she birthed you from the arctic,<br />and loved you anyway.
+      </p>
+    </div>
   </section>
 
   <section id="a-future" >
-  <h1>a future, maybe</h1>
-  <h2>by gabby bonifiglio</h2>
-  <p>1. when someone asks who lives in your heart, you picture me in morning light, my hair (it is constantly growing in) splayed across the pillow. our bed is white, and fluffier than our paychecks allow. the light makes my hair gold among the brown, and you notice.</p>
-  <p>2. waffles are a routine. you take yours with powdered sugar and sometimes lemon juice, mine always with syrup. i rise to make them&mdash;you see that sometimes they are the only idea that gets me out of bed, and you turn over with a moan and it is their smell that pulls you out of your nighttime. you bought me a tray for them, for my birthday, and this is one of the few presents i can remember that have made me cry.</p>
-  <p>3. we share everything, of course.</p>
-  <p>4. in the summertime, we make tomato pies and tarts and bloody marys, and we care for the plants in the back gingerly, but we don&rsquo;t wash them as well, and so our friends get used to dirt in their drinks.</p>
-  <p>5. some evenings, you burst through the door waving a book like its a flyswatter. &ldquo;i found one&rdquo; you repeat over and over. and then we race to the bed&mdash;you see that sometimes these are the only words that make me move quickly. we plop down and as we are, you open to a page in the middle of the book and begin reading, dramatically&mdash;i sometimes wonder if this is the only way you can. and after a few pages, one of us is in fits of tears or laughter (who can tell the difference) and i confirm &ldquo;you found one&rdquo; and we put the book on the shelf that takes up more space than we do.</p>
-  <div id = bed >
-  <img src="images/bed.jpg" >
-</div>
+    <div class="row">
+      <div class="col-sm-4">
+        <h1>a future, maybe</h1>
+        <h2>By Gabby Bonifiglio</h2>
+      </div>
+      <div class="col-sm-8">
+        <p>1. when someone asks who lives in your heart, you picture me in morning light, my hair (it is constantly growing in) splayed across the pillow. our bed is white, and fluffier than our paychecks allow. the light makes my hair gold among the brown, and you notice.</p>
+        <p>2. waffles are a routine. you take yours with powdered sugar and sometimes lemon juice, mine always with syrup. i rise to make them&mdash;you see that sometimes they are the only idea that gets me out of bed, and you turn over with a moan and it is their smell that pulls you out of your nighttime. you bought me a tray for them, for my birthday, and this is one of the few presents i can remember that have made me cry.</p>
+        <p>3. we share everything, of course.</p>
+        <p>4. in the summertime, we make tomato pies and tarts and bloody marys, and we care for the plants in the back gingerly, but we don&rsquo;t wash them as well, and so our friends get used to dirt in their drinks.</p>
+        <p>5. some evenings, you burst through the door waving a book like its a flyswatter. &ldquo;i found one&rdquo; you repeat over and over. and then we race to the bed&mdash;you see that sometimes these are the only words that make me move quickly. we plop down and as we are, you open to a page in the middle of the book and begin reading, dramatically&mdash;i sometimes wonder if this is the only way you can. and after a few pages, one of us is in fits of tears or laughter (who can tell the difference) and i confirm &ldquo;you found one&rdquo; and we put the book on the shelf that takes up more space than we do.</p>
+      </div>
+    </div>
+    <img src="images/bed.JPG" >
   </section>
 
   <!-- put credits including art here -->
