added vertical navigation

--- a/index.html
+++ b/index.html
@@ -36,11 +36,153 @@
 </head>
 <body>
 
-  <!-- <section id="toc">
-  </section> -->
+  <!-- <section class="cd-section" id="toc"> -->
+  <nav id="cd-vertical-nav">
+		<ul>
+			<li>
+				<a href="#editor-note" data-number="1">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Letter From The Editor</span>
+				</a>
+			</li>
+			<li>
+				<a href="#spectacle_of_black_life" data-number="2">
+					<span class="cd-dot"></span>
+					<span class="cd-label">The Spectacle of Black Life</span>
+				</a>
+			</li>
+			<li>
+				<a href="#rain" data-number="3">
+					<span class="cd-dot"></span>
+					<span class="cd-label">rain</span>
+				</a>
+			</li>
+			<li>
+				<a href="#all_grown_up" data-number="4">
+					<span class="cd-dot"></span>
+					<span class="cd-label">All Grown Up But Still Sifting Through Pebbles</span>
+				</a>
+			</li>
+			<li>
+				<a href="#etsi" data-number="5">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Etsi Udiditlv // Our Lost Mother</span>
+				</a>
+			</li>
+			<li>
+				<a href="#big-chop" data-number="6">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Big Chop</span>
+				</a>
+			</li>
+  		<li>
+				<a href="#mira-que" data-number="7">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Mira Que Te Quiso, Fue Por Tu Pelo</span>
+				</a>
+			</li>
+      <li>
+        <a href="#blackberries" data-number="8">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Blackberries & Brown Sugar</span>
+        </a>
+      </li>
+      <li>
+        <a href="#carissa" data-number="9">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Mary's Grandbaby</span>
+        </a>
+      </li>
+      <li>
+        <a href="#aishvarya" data-number="10">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Fault Line Swell</span>
+        </a>
+      </li>
+      <li>
+        <a href="#emily" data-number="11">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Star Ferry</span>
+        </a>
+      </li>
+      <li>
+        <a href="#anonymous" data-number="12">
+          <span class="cd-dot"></span>
+          <span class="cd-label">i don't feel trapped anymore but i still don't feel free</span>
+        </a>
+      </li>
+      <li>
+        <a href="#tiara" data-number="13">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Limbo</span>
+        </a>
+      </li>
+      <li>
+        <a href="#slow-brunch" data-number="14">
+          <span class="cd-dot"></span>
+          <span class="cd-label">A Slow Brunch</span>
+        </a>
+      </li>
+      <li>
+        <a href="#curly-routine" data-number="15">
+          <span class="cd-dot"></span>
+          <span class="cd-label">My Curly Hair Routine</span>
+        </a>
+      </li>
+      <li>
+        <a href="#keep-love" data-number="16">
+          <span class="cd-dot"></span>
+          <span class="cd-label">You Can Keep Your Love</span>
+        </a>
+      </li>
+      <li>
+        <a href="#colored-women" data-number="17">
+          <span class="cd-dot"></span>
+          <span class="cd-label">For Colored Women</span>
+        </a>
+      </li>
+      <li>
+        <a href="#guide-parents" data-number="18">
+          <span class="cd-dot"></span>
+          <span class="cd-label">A Guide to Helping Depressed Parents</span>
+        </a>
+      </li>
+      <li>
+        <a href="#unmasked-friend" data-number="19">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Unmasked Friend</span>
+        </a>
+      </li>
+      <li>
+        <a href="#mother" data-number="20">
+          <span class="cd-dot"></span>
+          <span class="cd-label">mother</span>
+        </a>
+      </li>
+      <li>
+        <a href="#dreams-allowed" data-number="21">
+          <span class="cd-dot"></span>
+          <span class="cd-label">I'm allowed to have my dreams</span>
+        </a>
+      </li>
+      <li>
+        <a href="#mother-glass" data-number="22">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Mother's Glass</span>
+        </a>
+      </li>
+      <li>
+        <a href="#a-future" data-number="23">
+          <span class="cd-dot"></span>
+          <span class="cd-label">a future, maybe</span>
+        </a>
+      </li>
+		</ul>
+	</nav>
+  <!-- </section> -->
 
   <!-- SECTION ONE START letter to editor through all grown up-->
-  <section id="editor-note">
+  <section class="cd-section" id="editor-note">
     <h1> Letter From <br> The Editor</h1>
     <br>
     <br>
@@ -55,7 +197,7 @@
     </div>
   </section>
 
-  <section id="spectacle_of_black_life">
+  <section class="cd-section" id="spectacle_of_black_life">
     <br>
     <p>My least favorite icebreaker is the one where you go around in a circle and share what superpower you would choose to develop if you could, what superhuman ability you would will into your existence if given the chance. I nearly always choose mindreading because, admittedly, never knowing what other people are thinking is the Anthony Davis in the NBA All-Star game of sources of my anxiety. Yet, I&rsquo;ve always found myself in icebreaker situations with people whose superpower of choice is invisibility. It&rsquo;s funny&mdash;invisibility is the superpower I never got to choose.</p>
     <p>To be in my skin&mdash;to be a fat, mentally-ill, poor, Black woman&mdash;is to be both hypervisible and invisible, to be seen but never truly <em>seen</em>, never quite human, heard but never quite understood. It&rsquo;s not that I think all White people see me and see the demon that Darren Wilson saw when he murdered Michael Brown; it&rsquo;s more so that Black people in the liberal White imagination are still more enigma than human. Black people in the liberal White imagination are still the code that needs to be cracked, objects lost in translation. After the murder of Walter Scott, Brittany Cooper wrote about what she calls &ldquo;the spectacle of Black death,&rdquo; the cultural phenomenon of Black people nationwide scrolling through their Facebook friends&rsquo; vacation photos in the same breath as videos of Black people being slain in the street. Yet, I&rsquo;ve come to know that not only is Black death a spectacle to White people, but so also is Black life.</p>
@@ -88,7 +230,7 @@
 
   <!-- SECTION TWO START etsi udiditlv through blackberries & brown sugar -->
 
-  <section id ="rain">
+  <section class="cd-section" id ="rain">
     <h1> rain </h1>
     <h2> By Jaanvi Sant </h2>
     <div id="p_text">
@@ -110,7 +252,7 @@
     </div>
   </section>
 
-  <section id="all_grown_up">
+  <section class="cd-section" id="all_grown_up">
     <div class="row">
       <div class="col-sm-7">
         <h1> All Grown Up But Still Sifting Through Pebbles </h1>
@@ -152,7 +294,7 @@
 
 
   <!-- SECTION TWO START etsi udiditlv through blackberries & brown sugar-->
-  <section id="etsi">
+  <section class="cd-section" id="etsi">
     <div class="etsi-inner">
     <div class="etsi-title">
     <h1>Etsi <br />Udiditlv // <br/>Our Lost<br/>Mother</h1>
@@ -183,7 +325,7 @@
 
   </section>
 
-  <section id="big-chop">
+  <section class="cd-section" id="big-chop">
     <div class="row">
       <div class="col-sm-6">
         <p>I was told <br/>it was too nappy <br/>too unprofessional <br/>too wild</p>
@@ -200,7 +342,7 @@
       </div>
   </section>
 
-  <section id="mira-que">
+  <section class="cd-section" id="mira-que">
     <div class="row">
       <div class="col-sm-6">
         <h1>Mira Que Te Quiso, Fue Por Tu Pelo</h1>
@@ -214,7 +356,7 @@
     </div>
   </section>
 
-  <section id="blackberries">
+  <section class="cd-section" id="blackberries">
     <div>
       <h1>Blackberries<br>& Brown Sugar</h1>
       <h2>By Kayla Williams</h2>
@@ -234,26 +376,26 @@
 
 
   <!-- SECTION THREE START, mary's grandbaby through limbo -->
-<section id="carissa">
-    <div class="title">
-      <h1>Mary's Grandbaby (something like a goodbye for my grandmother)</h1>
-      <h2>By Carissa Fleury</h2>
-    </div>
-    <div class="text">
-      <p>my nana is<br>backyard peach trees<br>dripping in california sunshine but<br>her heart was always in<br>nashville</p>
-      <p>when she was forced from that home <br>because of fear of strange fruit<br>&amp; trees &amp; picnic postcards, she<br> breathed a sigh into a bottle and<br> buried it in the hot tennessee soil</p>
-      <p>my nana just gave her last sigh and <br>all I can think of is<br>charcoal women and how<br>she couldn’t remember me but <br>when she lay dying<br>my auntie told me across miles of land,<br>over crackling telephone lines and in cracking voices <br>that my nana’s eyelids fluttered when<br>she heard my voice</p>
-      <p>when I was a Black baby <br>(born with dusty dark skin <br>that lightened over the<br>years and a full head of hair) <br>she pressed her grammy kisses <br>into my cheeks and called<br>me “little peach” for the first time</p>
-      <p>as I grew up, I got gangly,<br>then<br>melancholy and every summer I<br>ran around picking peaches off of her <br>trees as she played jazz on the radio and told me that<br>my laugh sounded like a<br>miracle, taught me to<br>love the color yellow and long for her <br>Black fingers oiling my scalp when<br>I left at the end of each summer</p>
-      <p>my nana was the first one<br>who showed me Billie Holiday<br>on her back porch with sticky<br>fingers from homemade<br>pies and as she lay dying, I sang<br>her Billie Holiday—<br>for years, I was dreading<br>this day becoming a marked-on-the-calendar day <br>this same day as her daughter’s birthday<br>she passed away and<br>my papa was an oak tree but<br>my nana was a warm breeze</p>
-      <p>my nana taught me that this Black<br>body is holy, wholly<br>she taught me to love each inch of my skin, <br>to oil it up<br>because nobody else would love it like I did <br>to braid my hair each night with my fingers <br>(the same as hers)<br>to stand with a straight spine (when I could) <br>to speak in a red brick voice and<br>to never let no white men tell<br>me I wasn’t worth nothin’<br>because I was Mary’s grandbaby and ain’t <br>nobody gon’ tell me I’m not worthy</p>
-      <p>papa went first and now my nana, <br>my two Black strongholds<br>&amp; now they’re ghosts<br>or maybe spirits<br>or maybe they’re nowhere<br>or maybe they’re everywhere<br>and maybe this<br>black queer body of mine will<br>always tingle when I eat peaches or hear Billie</p>
-      <p>and when I braid my Black girl <br>students’ hair and<br>my fingers twist as<br>second nature, and they ask me <br>where I learned this, I will say <br>with a warm breeze smile<br>“my nana taught me.”</p>
-    </div>
-  <img id="summer_img" src="images/small_summer.png">
-</section>
+  <section class="cd-section" id="carissa">
+      <div class="title">
+        <h1>Mary's Grandbaby (something like a goodbye for my grandmother)</h1>
+        <h2>By Carissa Fleury</h2>
+      </div>
+      <div class="text">
+        <p>my nana is<br>backyard peach trees<br>dripping in california sunshine but<br>her heart was always in<br>nashville</p>
+        <p>when she was forced from that home <br>because of fear of strange fruit<br>&amp; trees &amp; picnic postcards, she<br> breathed a sigh into a bottle and<br> buried it in the hot tennessee soil</p>
+        <p>my nana just gave her last sigh and <br>all I can think of is<br>charcoal women and how<br>she couldn’t remember me but <br>when she lay dying<br>my auntie told me across miles of land,<br>over crackling telephone lines and in cracking voices <br>that my nana’s eyelids fluttered when<br>she heard my voice</p>
+        <p>when I was a Black baby <br>(born with dusty dark skin <br>that lightened over the<br>years and a full head of hair) <br>she pressed her grammy kisses <br>into my cheeks and called<br>me “little peach” for the first time</p>
+        <p>as I grew up, I got gangly,<br>then<br>melancholy and every summer I<br>ran around picking peaches off of her <br>trees as she played jazz on the radio and told me that<br>my laugh sounded like a<br>miracle, taught me to<br>love the color yellow and long for her <br>Black fingers oiling my scalp when<br>I left at the end of each summer</p>
+        <p>my nana was the first one<br>who showed me Billie Holiday<br>on her back porch with sticky<br>fingers from homemade<br>pies and as she lay dying, I sang<br>her Billie Holiday—<br>for years, I was dreading<br>this day becoming a marked-on-the-calendar day <br>this same day as her daughter’s birthday<br>she passed away and<br>my papa was an oak tree but<br>my nana was a warm breeze</p>
+        <p>my nana taught me that this Black<br>body is holy, wholly<br>she taught me to love each inch of my skin, <br>to oil it up<br>because nobody else would love it like I did <br>to braid my hair each night with my fingers <br>(the same as hers)<br>to stand with a straight spine (when I could) <br>to speak in a red brick voice and<br>to never let no white men tell<br>me I wasn’t worth nothin’<br>because I was Mary’s grandbaby and ain’t <br>nobody gon’ tell me I’m not worthy</p>
+        <p>papa went first and now my nana, <br>my two Black strongholds<br>&amp; now they’re ghosts<br>or maybe spirits<br>or maybe they’re nowhere<br>or maybe they’re everywhere<br>and maybe this<br>black queer body of mine will<br>always tingle when I eat peaches or hear Billie</p>
+        <p>and when I braid my Black girl <br>students’ hair and<br>my fingers twist as<br>second nature, and they ask me <br>where I learned this, I will say <br>with a warm breeze smile<br>“my nana taught me.”</p>
+      </div>
+    <img id="summer_img" src="images/small_summer.png">
+  </section>
 
-<section id="aishvarya">
+  <section class="cd-section" id="aishvarya">
     <div class="title">
       <h1>Fault Line Swell</h1>
       <h2>By Aishvarya Arora</h2>
@@ -294,10 +436,10 @@
     <img id="butterfly" src="images/butterfly.png">
     <img id="heron" src="images/heron.png">
     <img id="pelican" src="images/pelican.png">
-  </section>
+</section>
 
 
- <section id="emily">
+  <section class="cd-section" id="emily">
     <h1>Star Ferry</h1>
     <h2>By Emily Ng</h2>
     <div class="column">
@@ -313,7 +455,7 @@
     </div>
   </section>
 
-  <section id="tiara_anon">
+  <section class="cd-section" id="tiara_anon">
     <div id="anonymous">
       <div id="blank_space"></div>
       <div class="title">
@@ -342,7 +484,7 @@
 
   <!-- SECTION FOUR START A slow brunch through a guide to helping depressed parents-->
 
-  <section id="slow-brunch">
+  <section class="cd-section" id="slow-brunch">
    <div class="container">
       <div class="row">
 
@@ -373,7 +515,7 @@
     </div>
   </section>
 
-  <section id="curly-routine">
+  <section class="cd-section" id="curly-routine">
     <div class="container">
       <div class="row">
 
@@ -429,7 +571,7 @@
     </div>
   </section>
 
-  <section id="keep-love">
+  <section class="cd-section" id="keep-love">
 
     <h1>You Can Keep Your <span class="red">Love</span></h1>
     <h2>By Cayla Brown</h2>
@@ -450,7 +592,7 @@
 
   </section>
 
-  <section id="colored-women">
+  <section class="cd-section" id="colored-women">
 
     <h1>For Colored Women</h1>
     <h2>By Anonymous</h2>
@@ -467,7 +609,7 @@
 
   </section>
 
-  <section id="guide-parents">
+  <section class="cd-section" id="guide-parents">
     <div class="container">
       <h1>A Guide to Helping Depressed Parents</h1>
       <h2>By Michael Fogg</h2>
@@ -488,7 +630,7 @@
 
   <!-- SECTION FIVE START unmasked friend through a future maybe-->
 
-  <section id="unmasked-friend">
+  <section class="cd-section" id="unmasked-friend">
     <h1>Unmasked Friend</h1>
     <p>When I see the spaces<br />Between your masculinity,<br />I know you<br />Still<br />Have a chance<br />at being a person.</p>
     <p><br />When you feel,<br />I see your person.<br />When you hurt,<br />I see your person.<br />When you cry,<br />I see your person.<br />They are beautiful.</p>
@@ -505,7 +647,7 @@
     <h2>By Saba Kohli Dav&eacute;</h2>
   </section>
 
-  <section id="mother">
+  <section class="cd-section" id="mother">
     <div class="text">
       <h1>mother</h1>
       <h2>By Sarah Chin</h2>
@@ -523,7 +665,7 @@
     </div>
   </section>
 
-  <section id ="dreams-allowed">
+  <section class="cd-section" id ="dreams-allowed">
     <div class="inner-text">
       <h1>I'm allowed to have my dreams</h1>
       <h2>By Nazifa Noor Sarawat</h2>
@@ -580,7 +722,7 @@
     </div>
   </section>
 
-  <section id="mother-glass">
+  <section class="cd-section" id="mother-glass">
     <h1>Mother's Glass</h1>
     <h2>By Asia Acevedo</h2>
     <div class="text">
@@ -608,7 +750,7 @@
     </div>
   </section>
 
-  <section id="a-future" >
+  <section class="cd-section" id="a-future" >
     <div class="row">
       <div class="col-sm-4">
         <h1>a future, maybe</h1>
@@ -626,11 +768,12 @@
   </section>
 
   <!-- put credits including art here -->
-  <section id="parting">
+  <section class="cd-section" id="parting">
   </section>
 
   <!-- Javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="js/modernizr.js"></script> <!-- Modernizr -->
   <script src="js/script.js"></script>
 
 </body>
