--- a/index.html
+++ b/index.html
@@ -867,9 +867,60 @@
     </div>
     <img src="images/bed.JPG" alt="photograph of a bed" >
   </section>
+  
 
   <!-- put credits including art here -->
   <section class="cd-section" id="parting">
+    <div class="row">
+    <div class="col-sm-5">
+     <img src="images/parting_shot_temp.png" alt="photograph of hands">
+    </div>
+
+    <div class="col-sm-7">
+       <h1> Web Credits </h1>
+        <ul>
+        <li> Kayden Mimmack, Hannah Freedman, Deanna Baris, Cathy Cowell, and Greta Jochem</li>
+      </ul>
+      <br>
+      <h1> Art Credits </h1>
+      <ul>
+          <li> Cover: Eve Feldberg <li> 
+          <li> Letter From The Editor: Annie Roome</li>
+          <li> The Spectacle of Black Life: Annie Roome</li>
+          <li> Rain: Cecily Lo </li>
+          <li> All Grown Up But Sifting Through The Pebbles: Liza Leonard </li>
+          <li> Etsi Udiditlv // Our Lost Mother: Liza Leonard</li>
+          <li> Big Chop: Lily Pisano</li>
+          <li> Blackberries & Brown Sugar: Annie Roome</li>
+          <li> Mary's Grandbaby (something like a goodbye for my grandmother): Annie Roome</li>
+          <li> Fault Line Swell: Nicole Cohen</li>
+          <li> Star Ferry: Emily Ng</li>
+          <li> i don’t feel trapped anymore but i still don’t feel free:  Nina Hofkosh-Hulbert</li>
+          <li> Limbo: Nina Hofkosh-Hulbert</li>
+          <li> A Slow Brunch: Ben Rutberg</li>
+          <li> My Curly Hair Routine: Jacqueline Enderle </li>
+          <li> You Can Keep Your Love: Rachel Cunnigham</li>
+          <li> For Colored Women: Judy Chen & Ana-Maria Murphy-Texidor</li>
+          <li> A Guide to Helping Depressed Parents: Judy Chen</li>
+          <li> Unmasked Friend: Cecily Los </li>
+          <li> mother: Nicole Cohen </li>
+          <li> I'm allowed to have dreams: Jacqueline Enderle </li>
+          <li> Mother's Glass: Abigail Barton</li>
+          <li> a future, maybe </li>
+          <li> Parting shot: Kyle Scott </li>
+      </ul>
+      <br> 
+
+      </div> 
+      </div> 
+  </section>
+
+  <section class="cd_section" id="back_to_O"> 
+    <ul> 
+      <li class="back-to-observer">
+       <i class="fa fa-hand-o-left" aria-hidden="true"></i>
+        <a href="http://tuftsobserver.org">Back to the Observer</a>
+      </ul> 
   </section>
 
   <!-- Javascript -->
