adding in parting shot

--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
   <section class="cd-section" id="parting">
     <div class="row">
     <div class="col-sm-5">
-     <img src="images/parting_shot_temp.png" alt="photograph of hands">
+     <img src="images/parting_shot.jpg" alt="photograph of hands">
     </div>
 
     <div class="col-sm-7">
